--- a/src/assets/scss/vars/_sizes.scss
+++ b/src/assets/scss/vars/_sizes.scss
@@ -1,27 +1,31 @@
+$border-radius-5: 5px;
+$border-radius-2: 0.25rem;
+$border-radius: 50%;
 
-$border-radius-1: 5px;
-$border-radius-2: .25rem;
-
-
-$standard-space-1: 20px;
-$standard-space-2: 15px;
-$standard-space-3: 10px;
-$standard-space-4: 40px;
-$standard-space-96: 960px;
-$standard-size: 15px;
+$standard-space-1: 1px;
+$standard-space-3: 3px;
+$standard-space-4: 4px;
+$standard-space-5: 5px;
+$standard-space-10: 10px;
+$standard-space-16: 16px;
+$standard-space-18: 18px;
+$standard-space-20: 20px;
 
 $weight-3: 300;
-$weight-7: 700;
+$weight-4: 400;
 
-$em-0_5: 0.5em;
-$em-1: 1em;
-$em-1_5: 1.5em;
+$em-1_2: 1.2em;
+$rem-1_5: 1.5rem;
 $em-2: 2em;
-$em-20: 20em;
-$em-50: 50em;
+$em-3: 3em;
+$em-4: 4em;
+$em-5: 5em;
+$em-6: 6em;
+$em-10: 10em;
 
 $opacity-0: 0;
 $opacity-1: 1;
+$opacity-0_7: 0.7;
 
 //screen
 $screen-height: 100vh;
