--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -1,46 +1,29 @@
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400&display=swap");
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400&display=swap');
 @import './vars/index.scss';
 @import './components/index.scss';
 
-
-// html, body {
-//   margin: 0;
-//   font-family: $primary-font;
-//   color: $primary-color;
-//   overflow-y: auto;
-// }
-
-
-// body {
-//   display: flex;
-//   flex-direction: column;
-//   background-color: $background-color-1;
-//   background-image: url($backgorund-image);
-//   min-height: $screen-height;
-// }
-
+html,
 body {
   margin: 0;
   padding: 0;
-  background-color: #f4f4f4;
-  color: #3c484e;
-  font-family: "Open Sans", sans-serif;
+  background-color: $background-color-1;
+  font-family: $primary-font;
 }
-
-
-
 .Main {
-  padding: 10px;
-  grid-template-columns: minmax(auto, 976px);
-  display: grid;
-  justify-content: center;
+  .Content {
+    margin-top: 5%;
+    padding: 10px;
+    grid-template-columns: minmax(auto, 976px);
+    display: grid;
+    justify-content: center;
 
-  &-loading {
-    border: 4px solid #f3f3f3;
-    border-top: 4px solid #3498db;
-    border-radius: 50%;
-    width: 20px;
-    height: 20px;
-    animation: spin 2s linear infinite;
+    &-loading {
+      border: 4px solid #f3f3f3;
+      border-top: 4px solid #3498db;
+      border-radius: $border-radius;
+      width: $standard-space-20;
+      height: $standard-space-20;
+      animation: spin 2s linear infinite;
+    }
   }
 }
