--- a/src/assets/scss/vars/_animations.scss
+++ b/src/assets/scss/vars/_animations.scss
@@ -1,38 +1,15 @@
-@import "_mixins";
-@import "_sizes";
-
-@keyframes acc_in {
-    0% {
-      opacity: $opacity-0;
-      @include transform(scale(0.8));
-    }
-    100% {
-      opacity: $opacity-1;
-      @include transform(scale(1));
-    }
-  }
-
-@keyframes acc_out {
-    0% {
-      opacity: $opacity-1;
-      @include transform(scale(1));
-    }
-    100% {
-      opacity: $opacity-0;
-      @include transform(scale(0.8));
-    }
-  }
-
+@import '_mixins';
+@import '_sizes';
 
 @keyframes fadeIn {
-    from {
-      opacity: $opacity-0;
-    }
-
-    to {
-      opacity: $opacity-1;
-    }
+  from {
+    opacity: $opacity-0;
   }
+
+  to {
+    opacity: $opacity-1;
+  }
+}
 
 @keyframes spin {
   0% {
