--- a/src/assets/scss/vars/_colors.scss
+++ b/src/assets/scss/vars/_colors.scss
@@ -1,7 +1,8 @@
-$primary-color: #333;
-$background-color-1: #a2c8fb;
-$background-color-2: #2980b9;
-$background-color-3: #fff;
+$primary-color: #ff6a00;
+$button-games: white;
+$text-color: #15302c;
+$background-color-1: f4f4f4;
+$background-color-2: #fff;
 
-$box-shadow-1: 0 0 20px rgba(0, 0, 0, 0.1);
-$box-shadow-2: 0 0 20px rgba(0, 0, 0, 0.2);
+$box-shadow-games: 8px 14px 38px rgba(39, 44, 49, 0.06),
+  1px 3px 8px rgba(39, 44, 49, 0.03);
