--- a/src/assets/scss/vars/index.scss
+++ b/src/assets/scss/vars/index.scss
@@ -1,6 +1,5 @@
-@import "_animations";
-@import "_colors";
-@import "_fonts";
-@import "_images";
-@import "_mixins";
-@import "_sizes";
+@import '_animations';
+@import '_colors';
+@import '_fonts';
+@import '_mixins';
+@import '_sizes';
